// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The React Native Web serializer should effect children 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 9,
      }
    }
  >
    Hello World!
  </Text>
</View>
`;

exports[`The React Native Web serializer should effect multiple children 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 9,
      }
    }
  >
    child 1
  </Text>
  <Text
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 2
  </Text>
  <View>
    <Text
      style={
        Object {
          "fontSize": 11,
        }
      }
    >
      child 3
    </Text>
  </View>
</View>
`;

exports[`The React Native Web serializer should effect render props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    prop={
      <Text
        style={
          Object {
            "fontSize": 9,
          }
        }
      />
    }
  />
</View>
`;

exports[`The React Native Web serializer should remove rnw-classnames and hoist the styles 1`] = `
<Text
  style={
    Object {
      "color": "red",
      "flex": 1,
      "fontSize": 14,
    }
  }
  testFunc={[Function]}
/>
`;

exports[`The React Native Web serializer should squash identical styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 1
  </Text>
  <Text
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 2
  </Text>
  <View>
    <Text
      style={
        Object {
          "fontSize": 10,
        }
      }
    >
      child 3
    </Text>
  </View>
</View>
`;
